@@ -3,6 +3,7 @@
 - When pull fails, remove and re-clone the repo instead of bailing.
 - vim-update-bundles no longer symlinks .vim and .vimrc into $HOME.
 - Remove the dotfile_path option, it's not necessary anymore.
+- No longer trim 'vim-' from the front of repo names in ~/.vim/bundle.
 - We now check for duplicate and conflicting Bundle entries.
 
 0.6     29 Jun 2011
